web-1130 create announcement dropdown overflow issue fixed.

--- a/client/app/shared/components/cp-typeahead/cp-typeahead.component.scss
+++ b/client/app/shared/components/cp-typeahead/cp-typeahead.component.scss
@@ -92,4 +92,8 @@ textarea {
     width: calc(100% - 30px);
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.3);
   }
+
+  &__overflow-unset {
+    overflow: unset !important;
+  }
 }
